added job posting via api-gateway